--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,22 +9,35 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-        with:
-          path: repo
 
-      - run: echo "123" >> repo/file.txt
+      - run: echo "123" >> file.txt
 
       - uses: EndBug/add-and-commit@ts-only
         with:
           message: 'Test1'
-          add: '*.txt -f'
-          cwd: repo
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       - uses: EndBug/add-and-commit@ts-only
         with:
           message: 'Test2'
           remove: '*.txt -f'
-          cwd: repo
+          signoff: asdasd
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+      - run: echo "123" >> file.txt
+
+      - uses: EndBug/add-and-commit@ts-only
+        with:
+          message: 'Test1'
+          add: '*.txt -f'
+          signoff: true
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - uses: EndBug/add-and-commit@ts-only
+        with:
+          message: 'Test2'
+          remove: '*.txt -f'
+          signoff: false
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
