use -f with tags

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,13 +16,13 @@ jobs:
         with:
           message: 'Test1'
           add: '*.txt -f'
-          tag: test
+          tag: test -f
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       - uses: EndBug/add-and-commit@ts-only
         with:
           message: 'Test2'
           remove: '*.txt -f'
-          tag: test
+          tag: test -f
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
