--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,7 +6,7 @@ on:
 
 jobs:
   test:
-    runs-on: ubuntu-latest
+    runs-on: windows-latest
     steps:
       - uses: actions/checkout@v2
 
@@ -16,10 +16,12 @@ jobs:
         with:
           message: 'Test1'
           add: '*.txt -f'
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
       - uses: EndBug/add-and-commit@ts-only
         with:
           message: 'Test2'
           remove: '*.txt -f'
         env:
-          GITHUB_TOKEN: asd
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
