--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,16 +14,14 @@ jobs:
 
       - run: echo $HOME
 
-      - uses: EndBug/add-and-commit@ts-only
+      - uses: EndBug/add-and-commit@master
         with:
-          message: 'Test1'
           add: '*.txt -f'
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
-      - uses: EndBug/add-and-commit@ts-only
+      - uses: EndBug/add-and-commit@master
         with:
-          message: 'Test2'
           remove: '*.txt -f'
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
