--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,7 +8,7 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v2
-
-      - name: Test step
-        run: echo abc
+      - uses: EndBug/label-sync@main
+        with:
+          source-repo: EndBug/add-and-commit
+          dry-run: true
