--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,11 +17,19 @@ jobs:
       - uses: EndBug/add-and-commit@master
         with:
           add: '*.txt -f'
+          message: add
+          push: false
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
+        
+      - run: git show
+        
       - uses: EndBug/add-and-commit@master
         with:
           remove: '*.txt -f'
+          message: remove
+          push: false
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          
+      - run: git show
