--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,7 +18,7 @@ jobs:
         with:
           add: '*.txt -f'
           message: add
-          tag: -lol
+          tag: lol
           push: false
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
