--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,7 +14,7 @@ jobs:
 
       - run: echo $HOME
 
-      - uses: EndBug/add-and-commit@v5
+      - uses: EndBug/add-and-commit@simple-git-upgrade
         with:
           add: '*.txt -f'
           message: add
@@ -25,7 +25,7 @@ jobs:
           
       - run: git show lol --name-only
                 
-      - uses: EndBug/add-and-commit@v5
+      - uses: EndBug/add-and-commit@simple-git-upgrade
         with:
           remove: '*.asd -f'
           message: remove
