--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,18 +14,15 @@ jobs:
 
       - run: echo $HOME
 
-      - uses: EndBug/add-and-commit@simple-git-upgrade
+      - uses: EndBug/add-and-commit@master
         with:
           add: '*.txt -f'
           message: add
-          tag: 'lol -f'
           push: true
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          
-      - run: git show lol --name-only
                 
-      - uses: EndBug/add-and-commit@simple-git-upgrade
+      - uses: EndBug/add-and-commit@master
         with:
           remove: '*.txt -f'
           message: remove
