--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,7 +14,7 @@ jobs:
 
       - run: echo $HOME
 
-      - uses: EndBug/add-and-commit@master
+      - uses: EndBug/add-and-commit@yaml-arrays
         with:
           add: '*.txt -f'
           message: add
@@ -22,7 +22,7 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
                 
-      - uses: EndBug/add-and-commit@master
+      - uses: EndBug/add-and-commit@yaml-arrays
         with:
           remove: '*.txt -f'
           message: remove
