--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,7 +17,7 @@ jobs:
 
       - uses: EndBug/add-and-commit@yaml-arrays
         with:
-          add: "['file1.txt -f', 'file2.txt -f']"
+          add: "['file1.txt -f']"
           message: add
           push: true
         env:
@@ -25,7 +25,7 @@ jobs:
                 
       - uses: EndBug/add-and-commit@yaml-arrays
         with:
-          remove: '*.txt -f'
+          remove: "['file1.txt -f']"
           message: remove
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
