--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,17 +15,13 @@ jobs:
 
       - run: echo $HOME
 
-      - uses: EndBug/add-and-commit@v6
+      - uses: EndBug/add-and-commit@master
         with:
           add: "['file1.txt -f', 'file2.txt -f']"
           message: add
           push: true
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
                 
-      - uses: EndBug/add-and-commit@v6
+      - uses: EndBug/add-and-commit@master
         with:
           remove: '["file1.txt -f", "file2.txt -f"]'
           message: remove
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
