--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,12 +19,13 @@ jobs:
         with:
           add: "['file1.txt -f', 'file2.txt -f']"
           message: add
-          push: true
+          push: false
           token: ${{ secrets.GITHUB_TOKEN }}
                 
       - uses: EndBug/add-and-commit@master
         with:
           remove: '["file1.txt -f", "file2.txt -f"]'
           message: remove
+          push: 'origin add-and-commit --force'
         env: 
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
