--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,12 +20,12 @@ jobs:
           add: "['file1.txt -f', 'file2.txt -f']"
           message: add
           push: false
-          token: ${{ secrets.GITHUB_TOKEN }}
+          author_name: Ajeje
+          author_email: lol@example.com
                 
       - uses: EndBug/add-and-commit@master
         with:
           remove: '["file1.txt -f", "file2.txt -f"]'
           message: remove
           push: 'origin add-and-commit --force'
-        env: 
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
