--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,16 +6,15 @@ on:
 
 jobs:
   test:
-    runs-on: macos-latest
+    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
 
       - run: echo "123" >> file1.txt
       - run: echo "123" >> file2.txt
 
-      - run: echo $HOME
 
-      - uses: EndBug/add-and-commit@master
+      - uses: ocean90/add-and-commit@try/github-actor
         with:
           add: "['file1.txt -f', 'file2.txt -f']"
           message: add
@@ -23,7 +22,7 @@ jobs:
           author_name: Ajeje
           author_email: lol@example.com
                 
-      - uses: EndBug/add-and-commit@master
+      - uses: ocean90/add-and-commit@try/github-actor
         with:
           remove: '["file1.txt -f", "file2.txt -f"]'
           message: remove
