should search in 1

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,13 +12,11 @@ jobs:
 
       - name: Check if version has been updated
         id: check
-        uses: EndBug/version-check@master
+        uses: EndBug/version-check@latest
         with:
           diff-search: true
           token: ${{ secrets.GITHUB_TOKEN }}
           file-name: ./.github/../package.json
-          file-url: ::before
-          static-checking: remoteIsNew
 
       - name: Log changed
         run: 'echo "Version has changed? ${{ steps.check.outputs.changed }} ${{ steps.check.outputs.commit }}! New version: ${{ steps.check.outputs.version }} (${{ steps.check.outputs.type }})"'
