--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,16 +4,22 @@ on:
   pull_request:
     types: [assigned, opened, synchronize, reopened]
   workflow_dispatch:
+  
+
+
 
 jobs:
   test:
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        node-version: [14.x, 15.x]
     steps:
       - uses: actions/checkout@v2
       
       - uses: actions/setup-node@v1
         with:
-          node-version: 15.x
+          node-version: ${{ matrix.node-version }}
 
       - run: echo "123" >> file1.txt
       - run: echo "123" >> file2.txt
