--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,10 +9,6 @@ jobs:
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v1
         with:
-          node-version: 10.x
+          node-version: 12.x
 
-      - run: npm i dotenv
-      - run: npm run custom
-        env:
-          UBI_EMAIL: ${{ secrets.UBI_EMAIL }}
-          UBI_PASSWORD: ${{ secrets.UBI_PASSWORD }}
+      - run: npm start
