--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,13 +25,13 @@ jobs:
       - run: echo "123" >> file2.txt
 
 
-      - uses: EndBug/add-and-commit@master
+      - uses: EndBug/add-and-commit@fatal-fix-1
         with:
           add: "['file1.txt -f', 'file2.txt -f']"
           message: add
           
                 
-      - uses: EndBug/add-and-commit@master
+      - uses: EndBug/add-and-commit@fatal-fix-1
         with:
           remove: '["file1.txt -f", "file2.txt -f"]'
           message: remove
